<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentBusName">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#11A374">


        <TextView
            android:id="@+id/txtregistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />


        <TextView
            android:id="@+id/txtbussname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/Business_Name"
            android:textColor="@color/white"
            android:textSize="33dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.61969906" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:hint="@string/Enter_your_shop_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/txtbussname" />

        <TextView
            android:id="@+id/txtRefrrelcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/Enter_Referral_Code"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="0.074" />

        <Button
            android:id="@+id/btn_bus_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/white"
            android:gravity="center_horizontal"
            android:text="@string/btnaccess"
            android:textColor="@color/unorg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRefrrelcode"
            app:layout_constraintVertical_bias="0.853" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>