<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F7F6">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F3F7F6">

        <ImageView
        android:id="@+id/curved_app_bar"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:src="@drawable/curved_app_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/profile_heading"
            app:flow_horizontalAlign="center"
            app:layout_constraintTop_toTopOf="@id/curved_app_bar"
            app:layout_constraintBottom_toBottomOf="@id/curved_app_bar"
            app:layout_constraintLeft_toLeftOf="@id/curved_app_bar"
            app:layout_constraintRight_toRightOf="@id/curved_app_bar"
            android:text="@string/txt_profile"
            />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/person_id_cardview"
            android:elevation="100dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintTop_toBottomOf="@id/curved_app_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="90dp"
            app:strokeColor="#0A7C57"
            app:strokeWidth="5dp"
            android:layout_marginStart="16dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/person_cardvw_constraint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/identity_logo"
                    android:background="#F3F7F6"
                    app:layout_constraintTop_toTopOf="@id/person_cardvw_constraint"
                    app:layout_constraintLeft_toLeftOf="@id/person_cardvw_constraint"
                    app:layout_constraintRight_toRightOf="@id/person_cardvw_constraint"
                    app:layout_constraintBottom_toBottomOf="@id/person_cardvw_constraint"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/identity_logo"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/busi_name"
            style="@style/profile_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_busi_name"
            app:layout_constraintLeft_toRightOf="@id/person_id_cardview"
            app:layout_constraintTop_toBottomOf="@id/curved_app_bar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/busi_mno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mobile_Number"
            style="@style/profile_style"
            app:layout_constraintLeft_toRightOf="@id/person_id_cardview"
            app:layout_constraintTop_toBottomOf="@id/busi_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/edit_logo"
           app:layout_constraintTop_toTopOf="@id/busi_name"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="20dp"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/language_cardv"
            app:layout_constraintTop_toBottomOf="@id/busi_mno"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="@id/language_cardv"
                app:layout_constraintLeft_toLeftOf="@id/language_cardv"
                android:id="@+id/language_constrint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/language_txt"
                    android:paddingStart="20dp"
                    style="@style/profile_style"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toTopOf="@id/language_constrint"
                    app:layout_constraintLeft_toLeftOf="@id/language_constrint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Language"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_language"
                    app:layout_constraintRight_toRightOf="@id/language_constrint"
                    app:layout_constraintBottom_toBottomOf="@id/language_constrint"
                    app:layout_constraintTop_toTopOf="@id/language_constrint"
                    android:paddingEnd="20dp"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/returnord_cardv"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/language_cardv"
            app:layout_constraintLeft_toLeftOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/returnord_constrint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/returnord_txt"
                    app:layout_constraintTop_toTopOf="@id/returnord_constrint"
                    app:layout_constraintLeft_toLeftOf="@id/returnord_constrint"
                    android:paddingStart="20dp"
                    style="@style/profile_style"
                    android:paddingVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_return_order"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/up_address_cardv"
            app:layout_constraintTop_toBottomOf="@id/returnord_cardv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/up_address_constrint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/up_address_txt"
                    android:paddingStart="20dp"
                    style="@style/profile_style"
                    android:paddingVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/up_address_constrint"
                    app:layout_constraintLeft_toLeftOf="@id/up_address_constrint"
                    android:text="@string/txt_up_add"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/share_ap_cardv"
            app:layout_constraintTop_toBottomOf="@id/up_address_cardv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share_ap_constrint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/share_ap_txt"
                    android:paddingStart="20dp"
                    style="@style/profile_style"
                    android:paddingVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_share_app"
                    app:layout_constraintTop_toTopOf="@id/share_ap_constrint"
                    app:layout_constraintLeft_toLeftOf="@id/share_ap_constrint"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_marginBottom="20dp"
            android:id="@+id/about_us_cardv"
            app:layout_constraintTop_toBottomOf="@id/share_ap_cardv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/about_us_constrint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/about_us_txt"
                    android:paddingStart="20dp"
                    style="@style/profile_style"
                    android:paddingVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/about_us_constrint"
                    app:layout_constraintLeft_toLeftOf="@id/about_us_constrint"
                    android:text="@string/txt_about_us"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>







    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>