<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#11A374"
        tools:context=".FragmentMobNo">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="320dp"
            android:layout_height="69dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/onlinethelalogo"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.218" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.61" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mobile_Number"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Enter_Mobile_Number"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline7" />

        <Button
            android:id="@+id/btn_submit_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/Submit"
            android:textColor="@color/unorg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
