<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentProductDescription"
    android:background="#F3F7F6">


<com.google.android.material.card.MaterialCardView
    android:id="@+id/back_green_card"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:cardCornerRadius="36dp"
    android:layout_width="36dp"
    android:layout_height="36dp"
    android:backgroundTint="#CDCCCC"
    android:layout_marginStart="16dp"
    android:layout_marginTop="30dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/back_green_const"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/back_green_image"
            app:layout_constraintTop_toTopOf="@id/back_green_const"
            app:layout_constraintLeft_toLeftOf="@id/back_green_const"
            android:paddingStart="10dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/back_arrow_logo_green"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
        <ImageView
            android:id="@+id/img_zoom"
            android:layout_width="156dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/product"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="30dp"
        android:id="@+id/img_small_cardv"
        app:layout_constraintTop_toBottomOf="@id/img_zoom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="156dp"
        android:layout_height="130dp"
        app:cardCornerRadius="16dp"
        android:elevation="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/img_small_constrain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_small"
                app:layout_constraintTop_toTopOf="@id/img_small_constrain"
                app:layout_constraintLeft_toLeftOf="@id/img_small_constrain"
                app:layout_constraintRight_toRightOf="@id/img_small_constrain"
                app:layout_constraintBottom_toBottomOf="@id/img_small_constrain"
                android:foregroundGravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:src="@drawable/product"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_name"
        style="@style/profile_style"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/img_small_cardv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Spinner
        android:id="@+id/spinner_Kg"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_product_name"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/profile_style"
        app:layout_constraintTop_toBottomOf="@id/spinner_Kg"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/txt_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/profile_style"
        app:layout_constraintTop_toBottomOf="@id/spinner_Kg"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/txt_strike_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/profile_style"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
       app:layout_constraintBottom_toBottomOf="@id/txt_cost"
        app:layout_constraintLeft_toRightOf="@id/txt_cost"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/Darkunorg"
        android:text="@string/btn_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_product_name"
        app:layout_constraintBottom_toBottomOf="@id/txt_cost"/>

    <TextView
        android:id="@+id/txt_desc_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:textColor="@color/unorg"
        android:text="@string/txt_about_this_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_cost" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_description"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_desc_heading" />










</androidx.constraintlayout.widget.ConstraintLayout>

